# Prediccionsuicidio

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
analisis_exploratorio/: index.html
data/processed/: pacientes_processed.csv
diccionarios/diccionario_procesado/: index.html
diccionarios/diccionario_raw/: index.html
docs/: README.md  analisis_exploratorio.md  etl.md  index.md  instrucciones_uso.md  mkdocs.yml  modelo.md  queries.md
docs/diccionarios/: diccionario_procesado.md  diccionario_raw.md
docs/docs/: data_properties.md  index.md  query_extraccion_datos.md
etl/: index.html
instrucciones_uso/: index.html
modelo/: index.html
notebooks/: analisis_exploratorio.ipynb  etl.ipynb  main.ipynb  modelado_entrenamiento.ipynb
queries/: index.html
search/: search_index.json
site/: 404.html  index.html
site/data_properties/: index.html
site/query_extraccion_datos/: index.html
site/search/: search_index.json
