[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prediccion_suicidio"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Iara Gonzalez Sardi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["prediccion_suicidio"]
include = ["pyproject.toml", "prediccion_suicidio/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["prediccion_suicidio"]
force-sort-within-sections = true

